<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Principal">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/home"
                    android:title="Home" />
                <item
                    android:id="@+id/nav_alumnos"
                    android:icon="@drawable/alumnos"
                    android:title="@string/label_alumnos" />
                <item
                    android:id="@+id/nav_faltas"
                    android:icon="@drawable/lista"
                    android:title="@string/label_faltas" />
            </group>
        </menu>
    </item>

    <item android:title="Profesor">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_foro"
                    android:icon="@drawable/lupa"
                    android:title="@string/label_foro" />
            </group>
        </menu>
    </item>

    <item android:title="Otros">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_ayuda"
                    android:icon="@drawable/ayuda"
                    android:title="@string/label_ayuda" />
                <item
                    android:id="@+id/nav_acerca_de"
                    android:icon="@drawable/acercade"
                    android:title="@string/acerca_de" />
            </group>
        </menu>
    </item>
</menu>